<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/mexico"
        app:layout_constraintBottom_toTopOf="@+id/brasao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <TextView
        android:id="@+id/Nome_Pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeTime"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/brasao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <Button
        android:id="@+id/butao_Selecao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:text="escalacao"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brasao"
        app:layout_constraintVertical_bias="0.014" />

    <ImageView
        android:id="@+id/brasao"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/mexico_ban"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <!--Contra Senegal-->

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/contra_senegal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butao_Selecao"
        app:layout_constraintVertical_bias="0.183"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/mexico_ban"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="64dp"
            android:text="@string/NomeEquador"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <!--InicioData-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="30/11"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <!--FimData-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/NomeArabia"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginRight="64dp"
            android:layout_gravity="end"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:layout_marginRight="16dp"
            android:background="@drawable/arabia"/>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <!--Contra Holanda-->

    <!--Contra Qatar-->
    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/contra_holanda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contra_senegal"
        app:layout_constraintVertical_bias="0.143"
        tools:layout_editor_absoluteX="26dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/argentina" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="64dp"
            android:gravity="center"
            android:text="@string/NomeArgentina"
            android:textSize="16dp"
            android:textStyle="bold" />
        <!--InicioData-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="26/11"
            android:textSize="16dp"
            android:textStyle="bold" />
        <!--FimData-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginRight="64dp"
            android:gravity="center"
            android:text="@string/NomeEquador"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:background="@drawable/mexico_ban"
            android:textStyle="bold" />
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/contra_qatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contra_holanda"
        app:layout_constraintVertical_bias="0.183"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/polonia"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="64dp"
            android:text="@string/NomePolonia"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <!--InicioData-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="22/11"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <!--FimData-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/NomeEquador"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginRight="64dp"
            android:layout_gravity="end"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:layout_marginRight="16dp"
            android:background="@drawable/mexico_ban"/>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>